--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -14,7 +14,7 @@ common: &default_settings
   # You must specify the license key associated with your New Relic
   # account.  This key binds your Agent's data to your account in the
   # New Relic service.
-  license_key: <%= Settings.newrelic.api_key %>
+  license_key: <%= ENV['NEWRELIC_API_KEY'] %>
   
   # Agent Enabled (Ruby/Rails Only)
   # Use this setting to force the agent to run or not run.
@@ -33,7 +33,7 @@ common: &default_settings
   # "All UI" then specify a semicolon-separated list of up to three
   # distinct names.  If you comment this out, it defaults to the 
   # capitalized RAILS_ENV (i.e., Production, Staging, etc)
-  app_name: <%= Settings.newrelic.app_name %>
+  app_name: <%= ENV['NEWRELIC_APP_NAME'] %>
 
   # When "true", the agent collects performance data about your 
   # application and reports this data to the New Relic service at
@@ -220,7 +220,7 @@ production:
 qa:
   <<: *default_settings
   monitor_mode: false
-  app_name: <%= Settings.newrelic.app_name %>
+  app_name: <%= ENV['NEWRELIC_APP_NAME'] %>
 
 # Many applications have a staging environment which behaves
 # identically to production.  Support for that environment is provided
