Use Jenkins DB user environment variable if it's there

--- a/config/database.yml
+++ b/config/database.yml
@@ -34,7 +34,7 @@ getit: &getit
   pool: 12
   checkout_timeout: 2
   host: <%= (ENV['GETIT_DB_HOST'] || 'localhost') %>
-  username: <%= (ENV['GETIT_DB_USER'] || 'root') %>
+  username: <%= (ENV['GETIT_DB_USER'] || ENV['JENKINS_DB_USER'] || 'root') %>
   password: <%= (ENV['GETIT_DB_PASSWORD'] || '') %>
   database: <%= (ENV['GETIT_DB_DATABASE'] || 'getit') %>
 
