--- a/.travis.yml
+++ b/.travis.yml
@@ -5,6 +5,10 @@ bundler_args: --without development
 services:
   - memcached
 
+before_install:
+  - "export DISPLAY=:99.0"
+  - "sh -e /etc/init.d/xvfb start"
+
 before_script:
   - mysql -e 'create database getit_test;'
   - RAILS_ENV=test bundle exec rake db:schema:load
