--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -23,6 +23,7 @@ default:
       holding_search_institution: NYU
       holding_search_text: Search for this title in BobCat.
       suppress_holdings: [ !ruby/regexp '/\$\$LBWEB/', !ruby/regexp '/\$\$LNWEB/', !ruby/regexp '/\$\$LTWEB/', !ruby/regexp '/\$\$LSWEB/', !ruby/regexp '/\$\$LWEB/', !ruby/regexp '/\$\$ONSMARCIT/', !ruby/regexp '/\$\$Onyumarcit/', !ruby/regexp '/\$\$1Restricted Internet Resources/' ]
+      suppress_urls: [ !ruby/regexp '/https\:\/\/getit\.library\.nyu\.edu\/ns\/resolve/', !ruby/regexp '/https\:\/\/www\.loc\.gov\/catdir\/toc/']
       ez_proxy: !ruby/regexp '/https\:\/\/ezproxy\.library\.nyu\.edu\/login\?url=/'
       service_types:
         - primo_source
