--- a/config/umlaut_services.yml
+++ b/config/umlaut_services.yml
@@ -12,11 +12,32 @@ default:
     resolve_css: resolve
     sfx_base_url: http://sfx.library.nyu.edu/sfxlcl41?
   services:
+    # Priority 1
+    # We have GoogleBookSearch running early because it can take a bare ISBN
+    # and look up bibliographic metadata, which is useful to happen early.
+    # By running at the same priority as SFX, it will run concurrently
+    # and maximize fast response time. You could also have it run before SFX,
+    # if you needed SFX to have the enhanced metadata from GoogleBookSearch.
+    #
+    # It can also find cover images, abstracts, and links to
+    # previews and search-inside-the-book. You can turn
+    # each of those off if you want.
+    GoogleBookSearch:
+      type: GoogleBookSearch
+      priority: 1
+      api_key: <%= (ENV['GOOGLE_BOOK_SEARCH_API_KEY'] || 'GOOGLE_BOOK_SEARCH_API_KEY') %>
+      referent_enhance: true
+      fulltext: true
+      cover_image: true
+      abstract: true
+      web_links: true
+
     # Priority 2
+    # Run the Primo service After SFX, to get SFX referent enhancements
     NYU_Primo:
       service_id: NYU_Primo
       type: PrimoService
-      priority: 2 # After SFX, to get SFX metadata enhancement
+      priority: 2
       base_url: "<%= Exlibris::Primo.config.base_url %>"
       vid: NYU
       institution: NYU
@@ -33,18 +54,12 @@ default:
         - referent_enhance
 
     # Priority 3
-    # First half of Amazon, run in foreground, get metadata and cover images.
-    Amazon:
-      display_name: Amazon.com
-      type: Amazon
-      url: http://webservices.amazon.com/onca/xml
-      api_key: <%= (ENV['AMAZON_API_KEY'] || 'AMAZON_API_KEY') %>
-      secret_key: <%= (ENV['AMAZON_SECRET_KEY'] || 'AMAZON_SECRET_KEY') %>
-      associate_tag: <%= (ENV['AMAZON_ASSOCIATE_TAG'] || 'AMAZON_ASSOCIATE_TAG') %>
+    # Blind link to price comparison site AllBooks.com.
+    # just a blind link with no API pre-check, will be near
+    # instantaneous to calculate.
+    AllBooksDotCom:
+      type: AllBooksDotCom
       priority: 3
-      service_types:
-        - referent_enhance
-        - cover_image
 
     # Priority 5
     # Wayfinder to return whence you came
@@ -92,21 +107,6 @@ default:
         - from_aleph
         - requestability
 
-    # Priority b: Background
-    # Second half of Amazon. It's Slow to lookup highlighted_link and search_inside
-    # availability, so we do it in a bg wave.
-    Amazon_bg:
-      type: Amazon
-      api_key: <%= (ENV['AMAZON_API_KEY'] || 'AMAZON_API_KEY') %>
-      secret_key: <%= (ENV['AMAZON_SECRET_KEY'] || 'AMAZON_SECRET_KEY') %>
-      associate_tag: <%= (ENV['AMAZON_ASSOCIATE_TAG'] || 'AMAZON_ASSOCIATE_TAG') %>
-      priority: b
-      service_types:
-        - abstract
-        - highlighted_link
-        - search_inside
-        - excerpts
-
     CoverThing:
       type: CoverThing
       developer_key: <%= (ENV['COVER_THING_DEVELOPER_KEY'] || 'COVER_THING_DEVELOPER_KEY') %>
@@ -123,11 +123,6 @@ default:
     UlrichsCover:
       type: UlrichsCover
       priority: b
-
-    GoogleBookSearch:
-      type: GoogleBookSearch
-      priority: b
-      api_key: <%= (ENV['GOOGLE_BOOK_SEARCH_API_KEY'] || 'GOOGLE_BOOK_SEARCH_API_KEY') %>
 
     # Priority c: Background
     # Web of Knowledge API has no api key, but your
@@ -166,12 +161,6 @@ default:
       #   self_type: fulltext
       #   existing_service: GoogleBookSearch
       #   existing_type: fulltext
-
-    IsbnDb:
-      display_name: isbndb.com
-      type: IsbnDb
-      priority: d
-      access_key: <%= (ENV['ISBN_DB_ACCESS_KEY'] || 'ISBN_DB_ACCESS_KEY') %>
 
     InternetArchive:
       display_name: the Internet Archive
