Add the aleph and primo env vars that VCR expects

--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,9 @@ language: ruby
 
 bundler_args: --without development
 
+env:
+  - ALEPH_BASE_URL=http://aleph.library.edu ALEPH_REST_URL=http://aleph.library.edu:1891/rest-dlf PRIMO_BASE_URL=http://primo.library.edu
+
 services:
   - memcached
 
