Reduce database connection pools for dev and staging

--- a/config/database.yml
+++ b/config/database.yml
@@ -40,6 +40,7 @@ getit: &getit
 
 development: &development
   <<: *getit
+  pool: 5
 
 # Warning: The database defined as "test" will be erased and
 # re-generated from your development database when you run "rake".
@@ -55,6 +56,7 @@ cucumber:
 
 staging:
   <<: *getit
+  pool: 5
 
 reindex:
   <<: *getit
