--- a/.travis.yml
+++ b/.travis.yml
@@ -12,12 +12,14 @@ before_script:
   - mysql -e 'create database getit_test;'
   - RAILS_ENV=test bundle exec rake db:schema:load
 
+script: "RAILS_ENV=test bundle exec rake"
+
 rvm:
   # - jruby-19mode # JRuby (1.9)
   # - rbx-19mode
-  - 2.0.0
   - 2.1.3
   - 2.2.3
+  - 2.3.0
 
 git:
   submodules: false
