--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,7 @@ env:
     - ALEPH_REST_URL=http://aleph.library.edu:1891/rest-dlf
     - PRIMO_BASE_URL=http://primo.library.edu
     - LOGIN_URL=https://dev.login.library.nyu.edu
+    - PASSIVE_LOGIN_PATH=/login/passive
     - SSO_LOGOUT_PATH=/logout
     - NS_BX_TOKEN=NS_BX_TOKEN
 
