Add agent_enabled to newrelic for qa and set it to false

--- a/config/newrelic.yml
+++ b/config/newrelic.yml
@@ -222,6 +222,7 @@ qa:
   <<: *default_settings
   monitor_mode: false
   developer_mode: false
+  agent_enabled: false
 
 # Many applications have a staging environment which behaves
 # identically to production.  Support for that environment is provided
